Minor, edits to comments and cleaning

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en" data-theme="dark" class="scroll-smooth">
 	<head>
 		<meta charset="utf-8" />
-		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
 			name="description"
 			content="View upcoming games using filtring options from genre, platform, months and years"
 		/>
-		<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Upcoming Games</title>
 	</head>
 	<body>
